5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1723_2508.log
== TEST (2019-05-09 11:42:56) 
-- CODE:
n=int(input())
i=0
resultado=0
while(i<n-1):
	soma=((-1)**i)*4/(2+i)*(3+i)*(4+i)
	resultado=resultado+soma
	i=i+1
resultado=resultado+3
print(round(resultado,8))
-- OUTPUT:
-3.26666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:43:17) 
-- CODE:
n=int(input())
i=0
resultado=0
while(i<n-1):
	soma=((-1)**i)*4/(2+i)*(3+i)*(4+i)
	resultado=resultado+soma
	i=i+1
resultado=resultado+3
print(round(resultado,8))
-- EXECUTION TIME:
0.179764
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
-3.26666667
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
65.63251276
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
-30.75017123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:43:20) 
-- CODE:
n=int(input())
i=0
resultado=0
while(i<n-1):
	soma=((-1)**i)*4/(2+i)*(3+i)*(4+i)
	resultado=resultado+soma
	i=i+1
resultado=resultado+3
print(round(resultado,8))
-- OUTPUT:
-3.26666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:43:44) 
-- CODE:
n=int(input())
i=0
resultado=0
while(i<n-1):
	soma=((-1)**i)*4/((2+i)*(3+i)*(4+i))
	resultado=resultado+soma
	i=i+1
resultado=resultado+3
print(round(resultado,8))
-- OUTPUT:
3.11428571
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:43:51) 
-- CODE:
n=int(input())
i=0
resultado=0
while(i<n-1):
	soma=((-1)**i)*4/((2+i)*(3+i)*(4+i))
	resultado=resultado+soma
	i=i+1
resultado=resultado+3
print(round(resultado,8))
-- EXECUTION TIME:
0.193445
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.11428571
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.12164319
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.12125735
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:43:55) 
-- CODE:
n=int(input())
i=0
resultado=0
while(i<n-1):
	soma=((-1)**i)*4/((2+i)*(3+i)*(4+i))
	resultado=resultado+soma
	i=i+1
resultado=resultado+3
print(round(resultado,8))
-- OUTPUT:
3.11428571
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:44:10) 
-- CODE:
n=int(input())
i=0
resultado=0
while(i<n-1):
	soma=((-1)**i)*4/((2+i)*(3+i)*(4+i))
	resultado=resultado+soma
	i=i+1
resultado=resultado+3
print(round(resultado,8))
-- OUTPUT:
3.11428571
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:44:18) 
-- CODE:
n=int(input())
i=0
resultado=0
while(i<n-1):
	soma=((-1)**i)*4/((2+i)*(3+i)*(4+i))
	resultado=resultado+soma
	i=i+1
resultado=resultado+3
print(round(resultado,8))
-- OUTPUT:
3.11428571
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:45:06) 
-- CODE:
n=int(input())
i=0
resultado=0
while(i<n):
	soma=((-1)**i)*4/((2+i)*(3+i)*(4+i))
	resultado=resultado+soma
	i=i+1
resultado=resultado+3
print(round(resultado,8))
-- OUTPUT:
3.12619048
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:45:17) 
-- CODE:
n=int(input())
i=0
resultado=0
while(i<n):
	soma=((-1)**i)*4/((2+i)*(3+i)*(4+i))
	resultado=resultado+soma
	i=i+1
resultado=resultado+3
print(round(resultado,8))
-- OUTPUT:
3.12619048
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:45:33) 
-- CODE:
n=int(input())
i=0
resultado=0
while(i<=n):
	soma=((-1)**i)*4/((2+i)*(3+i)*(4+i))
	resultado=resultado+soma
	i=i+1
resultado=resultado+3
print(round(resultado,8))
-- OUTPUT:
3.11825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:45:49) 
-- CODE:
n=int(input())
i=0
resultado=0
while(i<n-1):
	soma=((-1)**i)*4/((2+i)*(3+i)*(4+i))
	resultado=resultado+soma
	i=i+1
resultado=resultado+3
print(round(resultado,8))
-- OUTPUT:
3.11428571
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:46:02) 
-- CODE:
n=int(input())
i=0
resultado=0
while(i<n+1):
	soma=((-1)**i)*4/((2+i)*(3+i)*(4+i))
	resultado=resultado+soma
	i=i+1
resultado=resultado+3
print(round(resultado,8))
-- OUTPUT:
3.11825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:46:23) 
-- CODE:
n=int(input())
i=0
resultado=0
while(i<n):
	soma=((-1)**i)*4/((2+i)*(3+i)*(4+i))
	resultado=resultado+soma
	i=i+1
resultado=resultado+3
print(round(resultado,8))
-- OUTPUT:
3.12619048
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:47:59) 
-- CODE:
n=int(input())
i=0
resultado=0
while(i<n-1):
	soma=((-1)**i)*4/((2)*(2+i)*(3+2i))
	resultado=resultado+soma
	i=i+1
resultado=resultado+3
print(round(resultado,8))
-- ERROR:
File "XXXX", line 5
    soma=((-1)**i)*4/((2)*(2+i)*(3+2i))
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:48:22) 
-- CODE:
n=int(input())
i=0
resultado=0
while(i<n-1):
	soma=((-1)**i)*4/((2)*(2+i)*(3+2*i))
	resultado=resultado+soma
	i=i+1
resultado=resultado+3
print(round(resultado,8))
-- OUTPUT:
3.22698413
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:50:29) 
-- CODE:
n=int(input())
i=0
resultado=0
while(i<n-1):
	soma=((-1)**i)*4/((2+2*i)*(3+2*1)*(4+i*2))
	resultado=resultado+soma
	i=i+1
resultado=resultado+3
print(round(resultado,8))
-- OUTPUT:
3.07333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:50:50) 
-- CODE:
n=int(input())
i=0
resultado=0
while(i<n-1):
	soma=((-1)**i)*4/((2+2*i)*(3+2*i)*(4+i*2))
	resultado=resultado+soma
	i=i+1
resultado=resultado+3
print(round(resultado,8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:51:07) 
-- CODE:
n=int(input())
i=0
resultado=0
while(i<n-1):
	soma=((-1)**i)*4/((2+2*i)*(3+2*i)*(4+i*2))
	resultado=resultado+soma
	i=i+1
resultado=resultado+3
print(round(resultado,8))
-- EXECUTION TIME:
0.198068
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
